--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-jar {
+bootJar {
     manifest {
         attributes 'Implementation-Title': projectName,
                    'Implementation-Version': version
