--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,9 @@
 group 'com.ptconsultancy'
 
-buildscript {
-    repositories {
-        jcenter()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE")
-        classpath("io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE")
-    }
-}
-
 def projectName = "Domain"
 def version = "1.1"
 
 apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
 sourceCompatibility = 1.8
 
@@ -27,15 +12,13 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-
     compile('commons-lang:commons-lang:2.6')
     compile('commons-io:commons-io:2.6')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-bootJar {
+jar {
     manifest {
         attributes 'Implementation-Title': projectName,
                    'Implementation-Version': version
