--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,18 @@ def version = "1.1"
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+//create a single Jar with all dependencies
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': projectName,
+                'Implementation-Version': version
+    }
+    baseName = projectName + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
 
 repositories {
     mavenCentral()
@@ -16,13 +28,6 @@ dependencies {
     compile('commons-io:commons-io:2.6')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-
-jar {
-    manifest {
-        attributes 'Implementation-Title': projectName,
-                   'Implementation-Version': version
-    }
 }
 
 def jenkins = "C:/Program Files (x86)/Jenkins/workspace"
