--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ task fatJar(type: Jar) {
         attributes 'Implementation-Title': projectName,
                 'Implementation-Version': version
     }
-    baseName = projectName + '-all'
+    baseName = projectName
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
